return password in set single user
